<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Marca"
                android:theme="@style/form_text_size"
             />
            <Spinner
                android:id="@+id/form_spinner_marca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/form_text_size"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Sistema"
                android:theme="@style/form_text_size"
                />
            <Spinner
                android:id="@+id/form_spinner_sistema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/form_text_size"
                />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Processador"
                android:theme="@style/form_text_size"
                />
            <Spinner
                android:id="@+id/form_spinner_Processador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/form_text_size"
                />

        </TableRow>
        <Switch
            android:id="@+id/form_switch_usado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:theme="@style/form_text_size"
            android:text="@string/form_label_usado"
            android:textOn="@string/form_label_on"
            android:textOff="@string/form_label_off"
            />
        <RadioGroup android:id="@+id/form_radiogroup_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/form_radiobutton_desktop"
                android:text="@string/form_radio_desktop"
                android:theme="@style/form_text_size"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/form_radiobutton_notebook"
                android:text="@string/form_radio_notebook"
                android:theme="@style/form_text_size"
                />

        </RadioGroup>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:theme="@style/form_text_size"
                android:text="@string/form_seebbar_memoria"
                />
            <TextView
                android:id="@+id/form_textview_memoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:theme="@style/form_text_size"
                android:background="@color/cinza"
                android:text="1GB"
                />

        </TableRow>
        <SeekBar
            android:id="@+id/form_seekbar_memoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="128"
            android:progress="1"
            />
        <TableRow>
            <EditText
                android:id="@+id/form_edittext_hd"
                android:inputType="number"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/form_text_size"
                android:drawableRight="@drawable/ic_gigabyte"
                android:maxLengeth="4"
                />
        </TableRow>

    </TableLayout>

</LinearLayout>